--- a/PennState/Views/Item/FlagItem.cshtml
+++ b/PennState/Views/Item/FlagItem.cshtml
@@ -15,7 +15,7 @@
                 <div class="form-group">
                     @Html.LabelFor(model => model.TheItem.ItemName, htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-10">
-                        @Html.EditorFor(model => model.TheItem.ItemName, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.EditorFor(model => model.TheItem.ItemName, new { htmlAttributes = new { @class = "form-control jon" } })
                         @Html.ValidationMessageFor(model => model.TheItem.ItemName, "", new { @class = "text-danger" })
                     </div>
                 </div>
