--- a/PennState/Views/Item/GetItemList.cshtml
+++ b/PennState/Views/Item/GetItemList.cshtml
@@ -537,9 +537,9 @@
             }
 
             $('#jstreeLoc').on('changed.jstree', function (e, data) {
-                if (data.node.children.length == 0) {
-                    return false;
-                }
+                //if (data.node.children.length == 0) {
+                //    return false;
+                //}
                 e.preventDefault();
                 var l = [], t = [], v = [], o = [];
                 if (data.event.type = "click") {
@@ -593,9 +593,9 @@
 
 
             $('#jstree1').on('changed.jstree', function (e, data) {
-                if (data.node.children.length == 0) {
-                    return false;
-                }
+                //if (data.node.children.length == 0) {
+                //    return false;
+                //}
                 e.preventDefault();
                 var l = [], t = [], v = [], o = [];
                 if (data.event.type = "click") {
@@ -649,9 +649,9 @@
 
 
             $('#jstree2').on('changed.jstree', function (e, data) {
-                if (data.node.children.length == 0) {
-                    return false;
-                }
+                //if (data.node.children.length == 0) {
+                //    return false;
+                //}
                 var l = [], t = [], v = [], o = [];
                 e.preventDefault();
                 if (data.event.type = "click") {
@@ -704,9 +704,9 @@
 
 
             $('#jstree3').on('changed.jstree', function (e, data) {
-                if (data.node.children.length == 0) {
-                    return false;
-                }
+                //if (data.node.children.length == 0) {
+                //    return false;
+                //}
                 var l = [], t = [], v = [], o = [];
                 e.preventDefault();
                 if (data.event.type = "click") {
