--- a/PennState/Content/Site.css
+++ b/PennState/Content/Site.css
@@ -14,6 +14,10 @@ li.end{
     margin-left:70%
 }
 
+.lineHeight{
+    line-height:10px;
+}
+
 #loading-bar-spinner.spinner {
     left: 50%;
     margin-left: -20px;
