fixed gallery slider

--- a/PennState/Content/Site.css
+++ b/PennState/Content/Site.css
@@ -18,6 +18,13 @@ li.end{
     line-height:10px;
 }
 
+/*.container{
+    width:680px;
+    height:680px;
+}*/
+
+
+
 #loading-bar-spinner.spinner {
     left: 50%;
     margin-left: -20px;
