fixed css in requests

--- a/PennState/Views/Item/GetRequests.cshtml
+++ b/PennState/Views/Item/GetRequests.cshtml
@@ -9,26 +9,26 @@
         <table id="requestTable" class="tablesorter table-hover table-striped">
             <thead>
                 <tr>
-                    <th style="font-size:134%;width:17%">
+                    <th style="font-size:134%;width:210px">
                         Item Name
                     </th>
-                    <th style="font-size:134%;width:3%">
+                    <th style="font-size:134%;width:210px">
                         Qty
                     </th>
-                    <th style="font-size:134%;width:5%">
+                    <th style="font-size:134%;width:210px">
                         Unit Price
                     </th>
-                    <th style="font-size:134%;width:5%">
+                    <th style="font-size:134%;width:210px">
                         Total
                     </th>
-                    <th style="font-size:134%;width:24%">
+                    <th style="font-size:134%;width:210px">
                         Message
                     </th>
-                    <th style="font-size:14px;width:9%">
+                    <th style="font-size:134%;width:105px">
                         User
                     </th>
 
-                    <th style="font-size:134%;width:20%"></th>
+                    <th style="font-size:134%;width:105px"></th>
                 </tr>
             </thead>
             <tbody>
@@ -36,35 +36,35 @@
                 {
                     foreach (var item in Model.Requests)
                     {
-                <tr id="rowReq_@item.Id" style="height:50px">
-                    <td style="font-size:134%;width:14%">
+                <tr id="rowReq_@item.Id" style="width:210px">
+                    <td style="font-size:134%;width:210px">
                         @Html.DisplayFor(modelItem => item.ItemName)
                     </td>
-                    <td style="font-size:134%;width:3%;text-align:left">
+                    <td style="font-size:134%;width:210px;text-align:left">
                         @Html.DisplayFor(modelItem => item.Quantity)
                     </td>
-                    <td style="font-size:134%;width:3%;text-align:left">
+                    <td style="font-size:134%;width:210px;text-align:left">
                         @Html.DisplayFor(modelItem => item.UnitPrice)
                     </td>
-                    <td style="font-size:134%;width:5%;text-align:center">
+                    <td style="font-size:134%;width:210px;text-align:center">
                         @Html.DisplayFor(modelItem => item.TotalPrice)
                     </td>
-                    <td style="font-size:134%;width:10%;text-align:left">
+                    <td style="font-size:134%;width:210px;text-align:left">
                         @Html.DisplayFor(modelItem => item.Message)
                     </td>
-                    <td style="font-size:134%;width:17%;text-align:right">
+                    <td style="font-size:134%;width:105px;text-align:left">
                         @Html.DisplayFor(modelItem => item.User.FirstName) @Html.DisplayFor(modelItem => item.User.LastName)
                     </td>
 
                     @if (HttpContext.Current.User.IsInRole("Admin"))
                     {
-                        <td style="font-size:134%;width:15%;text-align:left">
+                        <td style="font-size:134%;width:105px;text-align:left">
                             <a href="#" onclick="deleteRequest(@item.Id)">Delete</a>
                         </td>
                     }
                     else
                     {
-                        <td style="font-size:134%;width:18%"></td>
+                        <td style="font-size:134%;width:105px"></td>
                     }
                 </tr>
                     }
